# sheap

./: .gitignore  CMakeLists.txt  LICENSE  ProjectFiles.cmake  README.md
include/sheap/: Sheap.h
include/sheap/detail/: Context.h  Heap.h  Page.h  PageAllocator.h  SizeClass.h  SpinLock.h  ThreadCache.h  utils.h
src/: Sheap.cpp
src/benchmark/: CMakeLists.txt  bench_sheap.cpp
test/: CMakeLists.txt  test_sheap.cpp
